# grouper-python

./: .gitignore  README.md  azure-pipelines.yml  pyproject.toml  requirements-dev.txt
grouper/: __init__.py  client.py  group.py  privilege.py  stem.py  subject.py  user.py  util.py
grouper_python/: __init__.py  attribute.py  group.py  membership.py  privilege.py  stem.py  subject.py  util.py
grouper_python/objects/: __init__.py  attribute.py  base.py  client.py  exceptions.py  group.py  membership.py  person.py  privilege.py  stem.py  subject.py
pygrouper/: client.py  group.py  membership.py  privilege.py  stem.py  subject.py  user.py  util.py
pygrouper/objects/: client.py  exceptions.py  group.py  membership.py  person.py  stem.py  subject.py  user.py
tests/: conftest.py  data.py  test_attribute.py  test_base.py  test_client.py  test_group.py  test_person.py  test_privilege.py  test_stem.py  test_subject.py  test_util.py
